--- a/InstagramApplication/Views/Instagram/Index.cshtml
+++ b/InstagramApplication/Views/Instagram/Index.cshtml
@@ -9,19 +9,28 @@
     <script src="@Url.Content("~/Scripts/Custom.js")" type="text/javascript"></script>
 </head>
 <body>
-    @if (Request.IsAuthenticated)
-    {
-        foreach (var item in Model.data)
+    @{var t = 0; var i = 1;}
+    <div class="tab-@(t)">
+        @if (Request.IsAuthenticated)
         {
-            if (item.type == "image")
+            foreach (var item in Model.data)
             {
-            <img src="@item.images.standard_resolution.url" height="510" width="510" />
+                if (item.type == "image")
+                {
+                    <img src="@item.images.standard_resolution.url" height="250" width="250" />
+                    if (i % 4 == 0)
+                    {
+                        t++;
+                        @:</div><div class="tab-@(t)">
+                    }
+                }
+                i++;
             }
         }
-    }
-    else
-    {
-        @Html.Partial("Login")
-    }
+        </div>
+        else
+        {
+            @Html.Partial("Login")
+        }
 </body>
 </html>
