--- a/InstagramApplication/Views/Instagram/Login.cshtml
+++ b/InstagramApplication/Views/Instagram/Login.cshtml
@@ -1,3 +1,3 @@
-﻿<a href="https://instagram.com/oauth/authorize/?client_id=01b344efcdb445068a20f30391bea917&redirect_uri=http://localhost:58065/Instagram/Index&response_type=code&scope=basic+likes+comments+relationships">Sig in</a>
+﻿<h1><a href="https://instagram.com/oauth/authorize/?client_id=01b344efcdb445068a20f30391bea917&redirect_uri=http://localhost:58065/Instagram/Index&response_type=code&scope=basic+likes+comments+relationships">Sig in</a></h1>
 
 
